Wed Jan 29 07:44:32 1997  Simon Frankau <sgf@frankau.demon.co.uk>

	* Headers/gnustep/gui/NSCStringText.h: New file.
	* Headers/gnustep/gui/NSDragging.h: New file.
	* Headers/gnustep/gui/NSColorPicking.h: New file.
	* Headers/gnustep/gui/NSNibLoading.h: New file.
	* Headers/gnustep/gui/NSSpellProtocol.h: New file.
	* Headers/gnustep/gui/AppKit.h: Include new files.
	* Headers/gnustep/gui/Application.h: Add NSServicesRequests category.
	* Headers/gnustep/gui/NSColor.h (-decodeNXColor:): New method.
	* Headers/gnustep/gui/NSColorPicker.h (-alphaControlAddedOrRemoved:):
	New method.
	* Headers/gnustep/gui/NSMenu.h (-validateCell:): New method.
	* Source/Makefile.in: Add new files.
	* Source/NSBundle.m: New file.
	* Source/NSCStringText.m: New file.
	* SourceNSColor.m (-decodeNXColor:): New method.
	* Source/NSColorPicker.m (-alphaControlAddedOrRemoved:):
	New method.
	* Source/NSText.m (-changeSpelling:, -ignoreSpelling:): New methods.

Thu Jan 23 15:10:13 1997  Scott Christley  <scottc@net-community.com>

	* Makefile.in (install): Don't force make of source.
	* Source/Makefile.in: Use configure variables for libdir,
	includedir, bindir, and links.
	* Source/NSCell.m (-stringValue, -setStringValue:): Make copies.
	* Source/NSColorList.m (NSColorListNotEditableException): Already
	defined in NSApplication.
	* Source/NSTextFieldCell.m (-initWithFrame:): Bezeled by default.

Thu Dec  5 06:58:51 1996  GNUstep Development  <gnustep@net-community.com>

	* Source/NSColorList.m: Fill out implementation.
	* Source/NSColorWell.m: Initial implementation.

Thu Dec 05 09:56:25 1996  Scott Christley  <scottc@net-community.com>

	* Headers/gnustep/gui/NSMenu.h: Newer release of OpenStep
	specification indicates NSMenu subclasses from NSObject.
	* Headers/gnustep/gui/NSFontManager.h (-enumerateFontsAndFamilies):
	New method that backend must implement.
	(-enumerateFamilies): Delete old method.
	* Source/NSColor.m: Reverse usage of global variables for common